--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     <div class="nft-container">
 
       <a href="#" class="link-image">
-        <img src="src/images/image-equilibrium.jpg" alt="Equilibrium NFT" class="image">
+        <img
+         src="src/images/image-equilibrium.jpg" 
+         alt="Equilibrium NFT" 
+         class="image"
+         >
       </a>
       <a href="#" class="heading-link">
         <h1 class="heading">Equilibrium #3429</h1>
@@ -30,17 +34,21 @@
       <p class="description">
         Our Equilibrium collection promotes balance and calm.
       </p>
-      <div class="price-duration">
+      <div class="price-days-left">
         <p class="price">
           0.041 ETH
         </p>
-        <p class="duration">
+        <p class="days-left">
           3 days left
 
         </p>
       </div>
       <div class="creator">
-        <img src="./src/images/image-avatar.png" alt="Creator avatar" class="avatar">
+        <img
+         src="./src/images/image-avatar.png" 
+         alt="Creator avatar" 
+         class="avatar"
+         >
         <p class="author">
           Creation of <a href="#">Jules Wyvern</a>
         </p>
