--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
       <p class="description">
         Our Equilibrium collection promotes balance and calm.
       </p>
-      <div class="price-days-left">
+      <div class="price-time-left">
         <p class="price">
           0.041 ETH
         </p>
-        <p class="days-left">
+        <p class="time-left">
           3 days left
 
         </p>
