link author changed

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
       <a href="#" class="link-image">
         <img
-         src="src/images/image-equilibrium.jpg" 
-         alt="Equilibrium NFT" 
-         class="image"
+          alt="Equilibrium NFT" 
+          class="image"
+          src="src/images/image-equilibrium.jpg" 
          >
       </a>
       <a href="#" class="heading-link">
@@ -45,9 +45,9 @@
       </div>
       <div class="creator">
         <img
-         src="./src/images/image-avatar.png" 
-         alt="Creator avatar" 
-         class="avatar"
+          alt="Creator avatar" 
+          class="avatar"
+          src="./src/images/image-avatar.png" 
          >
         <p class="author">
           Creation of <a href="#">Jules Wyvern</a>
@@ -57,7 +57,7 @@
   </main>
   <footer aria-label="footer">
     <p class="attribution">
-      Coded by <a href="https://www.frontendmentor.io/profile/michel-moreira">Michel Moreira</a>.
+      Coded by <a href="https://github.com/michel-moreira">Michel Moreira</a>.
     </p>
   </footer>
 </body>
